2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update

2006-01-17  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: remove Ryan's star, replace with a much more
	  straight-forward text string.

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: update french translation, by Christophe Bliard
	  <christophe.bliard@trux.info>

2006-01-03  Ryan Lortie  <desrt@.desrt.ca>

	* battstat_applet.c (battery_full_notify): Move to the new libnotify
	  API.  Patch from Michael Vogt <mvogt@acm.org> closes bug #325541.

	* battstat_applet.c (change_background, create_layout): Remove the
	  old change_background function using the new functionality
	  in libpanel-applet instead.

2005-12-05  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c (battery_low_dialog): Set the "OK" button as the
	  default action (partially addresses bug #315954).

2005-12-05  Ryan Lortie  <desrt@desrt.ca>

	* battstat_applet.c (is_suspend_unavailable): New function to detect
	  in a distribution-specific way if suspend is unsupported.  Included
	  #ifdef'd out code section for supporting Ubuntu's PMI (used for
	  testing purposes).  Included <sys/types.h> and <sys/wait.h> for
	  WEXITSTATUS() used by the code.  Closes bug #314812.

2005-12-04  Ryan Lortie  <desrt@desrt.ca>

	* battstat.h:  Add last_present field to main structure.
	* battstat_applet.c (check_for_updates): Track last value of
	  'present' flag.  Update text label if 'present' or 'on_ac' flags
	  change (since these possibly affect the value of the label).

	Based on patch by Shun-ichi Tahara <jado@flowernet.gr.jp>

2005-12-04  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c (adaptor_update_property): HAL incorrectly spells
	  'adaptor' as 'adapter'.  This prevents battstat from tracking AC
	  adaptors properly (not noticed yet since we don't depend on this
	  functionality).  Change to HAL's way of spelling it.

2005-12-04  Ryan Lortie  <desrt@desrt.ca>
