@@ -1,3 +1,10 @@
+2006-01-30  Davyd Madeley  <davyd@madeley.id.au>
+
+	* battstat_applet.c:
+	- centre low battery dialog - closes #328959
+	- update libnotify API - closes #329145
+	  (based on work from Wouter Bolsterlee <gnome@xs4all.nl>)
+
 2006-01-21  Vincent Untz  <vuntz@gnome.org>
 
 	* docs/fr/fr.po: small update
